// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given a FavouritesToolTip - CloseButton should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  cursor: pointer;
  padding: 0;
  height: 0.75rem;
  width: 0.75rem;
}

<button
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given a FavouritesToolTip - Container should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  padding: 1rem;
  width: 18rem;
  border: 0.0625rem solid #9e9e9e;
  background: #fff;
  border-radius: 0.25rem;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.4);
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given a FavouritesToolTip - Content should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 0.875rem;
  line-height: 1.313rem;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given a FavouritesToolTip - ErrorContainer should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  padding: 1rem;
  width: 18rem;
  border: 0.0625rem solid #9e9e9e;
  background: #fff;
  border-radius: 0.25rem;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.4);
  width: 8.9rem;
  text-align: center;
}

<div
    class="components__Container-sc-1vbfmy5-0 c0"
  />
</DocumentFragment>
`;

exports[`Given a FavouritesToolTip - Header should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  margin-bottom: 1rem;
  font-family: "AzoSansRegular","Helvetica Neue",Arial,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given a FavouritesToolTip - ManageFavouritesButton should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  margin: 1.1rem 0 1.1rem;
}

.c0 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 !important;
  font-size: 1rem !important;
  font-weight: 500 !important;
  visibility: visible !important;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given a FavouritesToolTip - ShoppingLink should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: 0;
  cursor: pointer;
  padding: 0;
  color: #257f39;
  font-family: "AzoSansRegular","Helvetica Neue",Arial,sans-serif;
  font-size: 0.875rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<button
    class="c0"
  />
</DocumentFragment>
`;

exports[`Given a FavouritesToolTip - Title should render as expected 1`] = `
<DocumentFragment>
  .c0 {
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
  font-size: 0.938rem;
  font-weight: 500;
}

<div
    class="c0"
  />
</DocumentFragment>
`;
